Update _config.yml minima dark theme

--- a/_config.yml
+++ b/_config.yml
@@ -8,3 +8,6 @@ description: "Learning Experience Design (LXD)"
 # Build settings
 remote_theme: jekyll/minima
 # theme: theme-name - for local install
+
+minima:
+  skin: dark
