--- a/_config.yml
+++ b/_config.yml
@@ -9,5 +9,7 @@ description: "Learning Experience Design (LXD)"
 remote_theme: jekyll/minima
 # theme: theme-name - for local install
 
+{% comment %}
 minima:
   skin: dark
+{% endcomment %}
