Update _config.yml title change

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings - in YAML this is a comment, btw. Two-space indentation for the array for Minima theme.
-title: Donna's LXD blog
+title: Donna's LXD portfolio
 author:
   name: Donna MacLeod
   email: info@dmacleod.ca
