--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,6 @@ description: "Learning Experience Design (LXD)"
 # Build settings
 remote_theme: jekyll/minima
 # theme: theme-name - for local install
-
+show_excerpts: true  # to show the first part of the blog?
 minima:
   skin: dark
