--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ description: "Learning Experience Design (LXD)"
 
 # Build settings
 remote_theme: jekyll/minima 
-future: true
+# future: true - I added
 # theme: theme-name - for local install
-show_excerpts: true  # to show the first part of the blog?
+# show_excerpts: true  # to show the first part of the blog? - I added
 minima:
   skin: dark
