Update _config.yml safe email address

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Donna's LXD portfolio
 author:
   name: Donna MacLeod
-  email: info@dmacleod.ca
+  email: info [at] dmacleod.ca
 description: "Learning Experience Design (LXD)"
 
 # Build settings
